<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CA020614"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="100dp"
        android:layout_height="50dp"

        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/log_in"
        android:textColor="#FAF5EEEE"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <EditText
        android:id="@+id/editUserLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="#F9FFFFFF"
        android:textColorHint="#FBFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginBottom="28dp"
        android:background="#66B66B"
        android:text="@string/bt_log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:text="@string/first_time_here"
        android:textColor="#F9FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FEFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserLogin"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>